--- a/scss/_welcome.scss
+++ b/scss/_welcome.scss
@@ -85,7 +85,7 @@
     margin-bottom: 8px;
     border: 2px solid v.$primary-color-1;
     color: v.$primary-color-1;
-    padding: 8pxm;
+    padding: 8px;
     font-family: v.$ff-2;
 
     &:focus {
